--- a/MNA/build.gradle
+++ b/MNA/build.gradle
@@ -40,10 +40,10 @@ android {
 }
 
 dependencies {
-
-    implementation project(":unity-ads")
+    implementation 'com.unity3d.ads:unity-ads:3.6.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
+ //   implementation files('F:/MainProject/MNAapp/MNA/libs/unity-ads.aar')
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
