--- a/MNA/build.gradle
+++ b/MNA/build.gradle
@@ -52,5 +52,7 @@ dependencies {
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.google.code.gson:gson:2.8.6'
 
+
+    implementation 'com.google.android.gms:play-services-ads:19.7.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
 }
