--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,9 +17,9 @@
 
         <meta-data
             android:name="com.mna.hot"
-            android:value="aHR0cHM6Ly9tbmEubXVzaWMtYW5kLXNvbmdzLmNvbS9hZHNraXQv" />
+            android:value="aHR0cHM6Ly9jb25zb2xlLndpbmViZXJyeWhhbGxleS5jbG91ZC9hZG1pbi9hZHNraXQvYXBpL2luZGV4LnBocA==" />
 
-        <activity android:name=".MainActivity" android:screenOrientation="sensorLandscape">
+        <activity android:name=".MainActivity" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
