--- a/MNA/build.gradle
+++ b/MNA/build.gradle
@@ -52,6 +52,9 @@ dependencies {
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.google.code.gson:gson:2.8.6'
 
+    implementation('com.mopub:mopub-sdk:5.17.0@aar') {
+        transitive = true
+    }
 
     implementation 'com.google.android.gms:play-services-ads:19.7.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
