--- a/MNA/build.gradle
+++ b/MNA/build.gradle
@@ -48,14 +48,26 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    implementation 'com.facebook.android:audience-network-sdk:6.3.0'
+    implementation 'com.facebook.android:audience-network-sdk:6.5.1'
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.google.code.gson:gson:2.8.6'
+
+
+
+    implementation 'com.google.android.gms:play-services-ads:20.2.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+    implementation 'com.applovin:applovin-sdk:10.3.1'
+
+
+
 
     implementation('com.mopub:mopub-sdk:5.17.0@aar') {
         transitive = true
     }
 
-    implementation 'com.google.android.gms:play-services-ads:19.7.0'
-    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.mopub.mediation:applovin:10.3.1.0'
+
+    implementation 'com.mopub.mediation:facebookaudiencenetwork:6.5.1.0'
+    implementation 'com.mopub.mediation:admob:20.2.0.1'
 }
