--- a/MNA/src/main/AndroidManifest.xml
+++ b/MNA/src/main/AndroidManifest.xml
@@ -9,6 +9,10 @@
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="ca-app-pub-3940256099942544~3347511713"/>
+
+        <meta-data android:name="applovin.sdk.key"
+            android:value="hSNLeJNACD6-p4OI_ZC_OT14qaPmiNCMgRW6zT_vBQeuJLT6pG6aO5swyF_sxznxUofp3vicDURsGlw_47nCbc"/>
+
         <provider
             android:name=".net.ChalaEdChala"
             android:authorities="${applicationId}.c"
