--- a/MNA/build.gradle
+++ b/MNA/build.gradle
@@ -40,7 +40,7 @@ android {
 }
 
 dependencies {
-    implementation 'com.unity3d.ads:unity-ads:3.6.0'
+    implementation 'com.unity3d.ads:unity-ads:3.7.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
  //   implementation files('F:/MainProject/MNAapp/MNA/libs/unity-ads.aar')
@@ -70,4 +70,18 @@ dependencies {
 
     implementation 'com.mopub.mediation:facebookaudiencenetwork:6.5.1.0'
     implementation 'com.mopub.mediation:admob:20.2.0.1'
+
+
+
+//ADMOB
+    implementation 'com.ironsource.adapters:admobadapter:4.3.21'
+// Add Facebook Network
+    implementation 'com.ironsource.adapters:facebookadapter:4.3.28'
+// Add UnityAds Network
+    implementation 'com.ironsource.adapters:unityadsadapter:4.3.11'
+
+
+    implementation 'com.ironsource.sdk:mediationsdk:7.1.7'
+
+
 }
