--- a/MNA/build.gradle
+++ b/MNA/build.gradle
@@ -57,8 +57,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-ads:20.2.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
 
-    implementation 'com.applovin:applovin-sdk:10.3.1'
-
+    implementation 'com.applovin:applovin-sdk:11.0.0'
+    implementation 'com.applovin.mediation:facebook-adapter:6.8.0.5'
 
 
 
