--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,10 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    implementation 'androidx.ads:ads-identifier:1.0.0-alpha01'
+
+    // Used for the calls to addCallback() in the snippets on this page.
+    implementation 'com.google.guava:guava:28.0-android'
+
     implementation project(":MNA");
 }
