--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,12 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven { url 'https://artifacts.applovin.com/android' }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.1"
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
+        classpath "com.applovin.quality:AppLovinQualityServiceGradlePlugin:+"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
