--- a/MNA/build.gradle
+++ b/MNA/build.gradle
@@ -8,12 +8,11 @@ group = 'com.wine.lib'
 version = '1.0.0'
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.3"
+    compileSdkVersion 33
 
     defaultConfig {
         minSdkVersion 21
-        targetSdkVersion 30
+        targetSdkVersion 33
         versionCode 1
         versionName "1.0"
 
@@ -40,24 +39,20 @@ android {
 }
 
 dependencies {
-    implementation 'com.unity3d.ads:unity-ads:3.7.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.3.0'
- //   implementation files('F:/MainProject/MNAapp/MNA/libs/unity-ads.aar')
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    implementation 'com.facebook.android:audience-network-sdk:6.5.1'
-    implementation 'com.android.volley:volley:1.1.1'
-    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'com.google.android.material:material:1.6.1'
+
+    implementation 'com.facebook.android:audience-network-sdk:6.8.0'
+    implementation 'com.android.volley:volley:1.2.1'
+    implementation 'com.google.code.gson:gson:2.8.9'
 
 
 
-    implementation 'com.google.android.gms:play-services-ads:20.2.0'
+    implementation 'com.google.android.gms:play-services-ads:21.3.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
 
-    implementation 'com.applovin:applovin-sdk:11.0.0'
+    implementation 'com.applovin:applovin-sdk:11.1.3'
     implementation 'com.applovin.mediation:facebook-adapter:6.8.0.5'
 
 
@@ -84,4 +79,6 @@ dependencies {
     implementation 'com.ironsource.sdk:mediationsdk:7.1.7'
 
 
+    // Unity Ads
+    implementation 'com.unity3d.ads:unity-ads:4.4.1'
 }
